--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
     "classnames": "^2.3.1",
     "core-js": "^3.23.4",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.8",
+    "reactstrap": "^9.1.3",
     "redux": "4.2.0",
     "simplebar-react": "^2.4.1",
     "yup": "^0.32.11"
