--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@coreui/chartjs": "^3.0.0",
     "@coreui/coreui": "^4.2.0",
     "@coreui/icons": "^2.1.0",
